--- a/build.gradle
+++ b/build.gradle
@@ -36,9 +36,17 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    kotlinVersion = '1.3.71'
+}
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation "org.jetbrains.kotlin:kotlin-script-util"
+    implementation "org.jetbrains.kotlin:kotlin-script-runtime"
+    implementation "org.jetbrains.kotlin:kotlin-compiler-embeddable"
+    runtime "org.jetbrains.kotlin:kotlin-scripting-jsr223-embeddable"
 }
 
 compileKotlin {
