--- a/build.gradle
+++ b/build.gradle
@@ -42,11 +42,10 @@ ext {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation "org.jetbrains.kotlin:kotlin-script-util"
     implementation "org.jetbrains.kotlin:kotlin-script-runtime"
-    implementation "org.jetbrains.kotlin:kotlin-compiler-embeddable"
-    runtime "org.jetbrains.kotlin:kotlin-scripting-jsr223-embeddable"
+
+    testImplementation "org.junit.jupiter:junit-jupiter:5.5.2"
 }
 
 compileKotlin {
