--- a/dsl-lib-support/build.gradle
+++ b/dsl-lib-support/build.gradle
@@ -1,7 +1,7 @@
 
 plugins {
     id 'java-library' // todo: do I need it?
-    id 'org.jetbrains.kotlin.jvm'
+    id 'org.jetbrains.kotlin.jvm' // version '1.3.71'
 }
 
 repositories {
