--- a/dsl-lib-support/build.gradle
+++ b/dsl-lib-support/build.gradle
@@ -1,7 +1,7 @@
 
 plugins {
-    id 'java-library' // todo: do I need it?
-    id 'org.jetbrains.kotlin.jvm' // version '1.3.71'
+    id 'java-library'
+    id 'org.jetbrains.kotlin.jvm' // version '1.3.72'
 }
 
 repositories {
@@ -10,7 +10,18 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+//    implementation "org.jetbrains.kotlin:kotlin-compiler:1.3.72"
+//
+//    testImplementation "org.jetbrains.kotlin:kotlin-script-runtime:1.3.72"
+//    testImplementation "org.jetbrains.kotlin:kotlin-compiler-embeddable:1.3.72"
+//    testImplementation "org.jetbrains.kotlin:kotlin-script-util:1.3.72"
+
+    testImplementation "org.junit.jupiter:junit-jupiter:5.5.2"
 }
+
+//tasks.test {
+//    useJUnitPlatform()
+//}
 
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
