--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -10,14 +10,14 @@
 
     <extensions defaultExtensionNs="com.intellij">
         <codeInsight.lineMarkerProvider language="kotlin" implementationClass="LibMethodLineMarker"/>
-        <projectService serviceImplementation="CommandsRegService"/>
+        <projectService serviceImplementation="services.CommandsRegService"/>
     </extensions>
 
     <actions>
-        <action id="UpdateIcons" class="ShowPsiAction" text="Update Library Plugins Data">
+        <action id="UpdateIcons" class="actions.UpdateAction" text="Update Library Plugins Data">
             <add-to-group group-id="ProjectViewPopupMenu" anchor="first"/>
         </action>
-        <action id="UpdateInspections" class="AddInspectionAction" text="Update Inspections">
+        <action id="UpdateInspections" class="actions.AddInspectionAction" text="Update Inspections">
             <add-to-group group-id="ProjectViewPopupMenu" anchor="first"/>
         </action>
     </actions>
